# dbt_superstore

./: .gitignore  README.md  app.py  docker-compose.yml  justfile  profiles.yml.example  pyproject.toml
dbt_superstore/: dbt_project.yml
dbt_superstore/models/marts/dimensions/: dim__customer.sql  dim__date.sql  dim__geography.sql  dim__order.sql  dim__product.sql  schema.yml
dbt_superstore/models/marts/facts/: fct__orders.sql  schema.yml
dbt_superstore/models/marts/reporting/: fct_streamlit.sql
dbt_superstore/models/staging/: schema.yml  sources.yml  stg__customer.sql  stg__geography.sql  stg__orders.sql  stg__orders_transactions.sql  stg__product.sql  stg__returns.sql
dbt_superstore/tests/: assert_positive_profit_for_non_discounted.sql  assert_return_rate_below_threshold.sql
scripts/: xls_to_csv.py
