[project]
name = "data-challenge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dbt-core>=1.9.4",
    "dbt-postgres>=1.9.0",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "pytest>=8.3.5",
    "ruff>=0.11.8",
    "sqlalchemy>=2.0.40",
    "streamlit>=1.45.0",
    "xlrd>=2.0.1",
]

[tool.uv.workspace]
members = [
    "data-challenge",
]
